# auth-server

./: .env  Cargo.toml  README.MD  index.html  server_config.ini
migrations/2023-03-08-202210_create_users/: down.sql  up.sql
migrations/2023-03-13-152802_tokens/: down.sql  up.sql
migrations/2023-03-13-154036_tokens_default_timestamp/: down.sql  up.sql
migrations/2024-07-14-130839_create-timer/: down.sql  up.sql
migrations/2024-07-14-163719_create-jobs/: down.sql  up.sql
migrations/2024-07-23-210321_jobs_default_timestamps/: down.sql  up.sql
migrations/2024-07-25-193601_create_users/: down.sql  up.sql
migrations/2024-07-25-193734_tokens/: down.sql  up.sql
migrations/2024-07-25-193927_timers/: down.sql  up.sql
migrations/2024-07-25-194254_tasks/: down.sql  up.sql
src/: broadcast.rs  configuration.rs  db_connection.rs  db_ops.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  schema.rs
src/db_ops/: auth.rs  job.rs  process_jobs.rs  process_tasks.rs  process_tokens.rs
src/routes/: mod.rs  signin.rs  signup.rs
src/routes/guards/: mod.rs
src/routes/requests/: broadcast.rs  jobs.rs  mod.rs  tasks.rs
