[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.91"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.6"
futures = "0.3.26"
argon2 = "0.5.0"
base64 = "0.13"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[registries.crates-io]
protocol = "sparse"