[package]
name = "timer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
actix-files = "0.6.6"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.91"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.6"
futures = "0.3.30"
argon2 = "0.5.0"
base64 = "0.13"
config = "0.13.4"
actix-web-lab = "0.20.2"
tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
tokio-stream = "0.1.15"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[registries.crates-io]
protocol = "sparse"
